Remove IDE config dir, actually fix layout issue.

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -402,7 +402,6 @@ p {
 
   .ebook-image {
     background-color: $lb-gray;
-    max-width: 75%;
     display: flex;
     align-items: center;
     padding: 2em;
